updated readme, fixed a dead img link, added screenshots

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button id="cat">Cat</button>
         <button id="dog">Dog</button>
         <button id="mythical">Mythical</button>
-        <button id="fish">fish</button>
+        <button id="fish">Fish</button>
     </div>
     <div id="pet-card"></div>
     <h3>*if your pet needs are 6 choices</h3>
